--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "pagina",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
+  "description": "https://github.com/mui/material-ui/blob/v5.8.5/docs/data/material/components/app-bar/ButtonAppBar.js",
   "devDependencies": {
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
-  }
+    "react-scripts": "latest"
+  },
+  "name": "ButtonAppBar demo — Material UI"
 }
